--- a/app/popup/index.css
+++ b/app/popup/index.css
@@ -1,9 +1,13 @@
 body {
-    margin: 0;
+  margin: 0;
 }
 
 #root {
-    width: 450px;
-    height: 600px;
-    overflow-y: auto;
+  width: 375px;
+  height: 600px;
+  /* overflow-y: auto; */
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  flex: 1;
 }
