--- a/app/popup/reset.css
+++ b/app/popup/reset.css
@@ -498,10 +498,10 @@ input {
 }
 
 #root {
-    width: 357px;
-    min-width: 320px;
-    max-width: 375px;
-    height: 600px;
+    /*width: 357px;*/
+    /*min-width: 320px;*/
+    /*max-width: 375px;*/
+    /*height: 600px;*/
     background-color: #fff;
     position: relative;
     overflow: hidden;
