--- a/app/popup/index.css
+++ b/app/popup/index.css
@@ -3,8 +3,8 @@ body {
 }
 
 #root {
-  width: 375px;
-  height: 617px;
+  /*width: 375px;*/
+  /*height: 617px;*/
   /*overflow-y: auto; */
   display: flex;
   flex-direction: column;
